--- a/assets/index.css
+++ b/assets/index.css
@@ -521,31 +521,41 @@ footer {
     max-width: 1000px;
     position: relative;
     margin: auto;
-  }
-  
+}
+
 .mySlides {
+    position: relative;
     display: none;
+}
+
+.mySlides img {
+    max-height: 400px; 
+    height: 400px;
+    margin: 0 auto;
+    display: block;
+    width: 500px;
 }
 
 .prev, .next {
     cursor: pointer;
     position: absolute;
     top: 50%;
-    width: auto;
+    width: 100px;
     margin-top: -22px;
-    padding: 16px;
-    color: white;
+    padding: 12px;
+    color: #B68D40;
     font-weight: bold;
     font-size: 18px;
     transition: 0.6s ease;
     border-radius: 0 3px 3px 0;
     user-select: none;
-    }
+}
 
 .next {
     right: 0;
     border-radius: 3px 0 0 3px;
 }
+
 
 .prev:hover, .next:hover {
     background-color: rgba(0,0,0,0.8);
