--- a/assets/index.css
+++ b/assets/index.css
@@ -760,6 +760,29 @@ footer {
         width: 400px;
         height: 400px;
     }
+    
+    .mySlides img {
+        max-height: 300px; 
+        height: 300px;
+        margin: 0 auto;
+        display: block;
+        width: 300px;
+    }
+    
+    .prev, .next {
+        cursor: pointer;
+        position: absolute;
+        top: 50%;
+        width: 50px;
+        margin-top: -22px;
+        padding: 12px;
+        color: #B68D40;
+        font-weight: bold;
+        font-size: 18px;
+        transition: 0.6s ease;
+        border-radius: 0 3px 3px 0;
+        user-select: none;
+    }
 
     .footer-container {
         flex-direction: column;
