--- a/assets/index.css
+++ b/assets/index.css
@@ -104,6 +104,7 @@ span.text {
     border-radius: 5px;
     font-size: 16px;
     cursor: pointer;
+    text-decoration: none;
     transition: background-color 0.3s ease;
 }
 
@@ -115,6 +116,7 @@ span.text {
     position: absolute;
     top: 90%;
     left: 30%;
+    text-decoration: none;
     transform: translateX(-50%);
     background-color: white;
     color: black;
@@ -622,7 +624,7 @@ footer {
         flex-direction: column;
         align-items: center;
         justify-content: center;
-        padding-top: 20px;  
+        padding-top: 0;  
     }
 
     .hero nav ul.active {
