--- a/assets/index.css
+++ b/assets/index.css
@@ -99,6 +99,7 @@ span.text {
     transform: translateX(-50%);
     background-color: #B68D40;
     color: white;
+    text-align: center;
     padding: 10px 20px;
     border: 2px solid black;
     border-radius: 5px;
@@ -120,6 +121,7 @@ span.text {
     transform: translateX(-50%);
     background-color: white;
     color: black;
+    text-align: center;
     padding: 10px 20px;
     border: 2px solid black;
     border-radius: 5px;
@@ -629,6 +631,16 @@ footer {
 
     .hero nav ul.active {
         display: block;
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 50%;
+        z-index: 1000;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        padding-top: 0; 
     }
 
     .hero nav ul li {
@@ -775,7 +787,7 @@ footer {
         cursor: pointer;
         position: absolute;
         top: 50%;
-        width: 50px;
+        width: 56px;
         margin-top: -22px;
         padding: 12px;
         color: #B68D40;
