--- a/assets/index.css
+++ b/assets/index.css
@@ -576,11 +576,12 @@ footer {
 }
 
 .numbertext {
-    color: #f2f2f2;
+    color: red;
     font-size: 12px;
     padding: 8px 12px;
     position: absolute;
     top: 0;
+    left: 20%;
 }
 
 .dot {
@@ -617,16 +618,6 @@ footer {
 
     .hero nav ul {
         display: none;
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 50%;
-        z-index: 1000;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        padding-top: 0;  
     }
 
     .hero nav ul.active {
@@ -635,11 +626,11 @@ footer {
         top: 0;
         left: 0;
         width: 100%;
-        height: 50%;
+        height: 45%;
         z-index: 1000;
         flex-direction: column;
-        align-items: center;
-        justify-content: center;
+        align-items: flex-start !important;
+        justify-content: flex-start;
         padding-top: 0; 
     }
 
