--- a/assets/index.css
+++ b/assets/index.css
@@ -626,7 +626,7 @@ footer {
         top: 0;
         left: 0;
         width: 100%;
-        height: 45%;
+        height: auto;
         z-index: 1000;
         flex-direction: column;
         align-items: flex-start !important;
